--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   background-image: url('./assets/mobileBack.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+
+}
+
+body{
+  font-family: 'Nunito', sans-serif; 
 }
 
 @media only screen and (min-width: 1024px) {
