--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,12 @@ footer h1{
   }
 
 }
+
+
+/* DELETE BUTTON */ 
+.deleteButton:hover{
+  cursor: pointer; 
+  background: rgb(255, 255, 255, 0.8);
+  transition: 0.8s ease-out;
+}
+
