--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,23 @@ footer h1{
   transform: translateY(-50%);
   opacity: 70%;
 }
+
+
+/* MAIN PAGE SEC */ 
+
+.mainLogo:hover{
+  transition: transform 0.6s ease-out;
+}
+
+.mainLogo:hover{
+  transform: scale(1.1);
+}
+
+.planSection{
+  transition: transform 0.2s ease-out;
+}
+
+.planSection:hover{
+  opacity: 80%;
+  transform: translateY(-20%);
+}
